Adding support for JanusGraph