@@ -6,51 +6,41 @@ import org.junit.jupiter.api.Test;
 import java.util.List;
 import java.util.Map;
 
+import static com.benchmark.generator.QueryGenerator.Engine.NEO4J;
 import static org.junit.jupiter.api.Assertions.*;
 
 class QueryGeneratorTest {
 
-    /** Minimal fake DB that returns deterministic sample IDs and echoes queries. */
-    private static class FakeDb implements DatabaseClient {
-        @Override public void connect() { /* no-op */ }
-
-        @Override
-        public List<Map<String, Object>> executeQuery(String text, Map<String, Object> params) {
-            // pretend the DB returned one row with whatever we sent
-            return List.of(Map.of("text", text, "params", params == null ? Map.of() : params));
+    static class FakeDb implements DatabaseClient {
+        @Override public void connect() { }
+        @Override public List<Map<String, Object>> executeQuery(String cypher, Map<String, Object> params) { return List.of(); }
+        @Override public List<Map<String, Object>> executePrepared(QueryTemplate.PreparedQuery pq) { return List.of(); }
+        @Override public List<String> fetchSampleIds(String label, String idProp) {
+            // return a small but non-empty pool to avoid synthetic fallback
+            if ("Patient".equals(label)) return List.of("P00001","P00002","P00003");
+            if ("HealthcareUnit".equals(label)) return List.of("U001","U002");
+            if ("Diagnosis".equals(label)) return List.of("D001","D002","D003");
+            return List.of();
         }
-
-        @Override
-        public List<String> fetchSampleIds(String label, String idProperty) {
-            // provide a small fixed set of IDs so parameterized templates can materialize
-            return List.of("1", "2", "3", "4", "5");
-        }
-
-        @Override public void close() { /* no-op */ }
+        @Override public void close() { }
     }
 
     @Test
-    void prepareAllQueries_producesNonEmptyPools() {
+    void preparesPoolsWithParams() {
         DatabaseClient db = new FakeDb();
+        QueryGenerator gen = new QueryGenerator(db, NEO4J);
 
-        // NOTE: QueryGenerator now requires an Engine argument
-        QueryGenerator gen = new QueryGenerator(db, QueryGenerator.Engine.NEO4J);
+        var pools = gen.prepareAllQueries();
+        assertTrue(pools.containsKey("OLTP"));
+        assertTrue(pools.containsKey("GRAPH"));
+        assertTrue(pools.containsKey("OLAP"));
 
-        Map<String, List<QueryTemplate.PreparedQuery>> pools = gen.prepareAllQueries();
+        var oltp = pools.get("OLTP");
+        assertFalse(oltp.isEmpty());
 
-        assertNotNull(pools, "pools map must not be null");
-        assertTrue(pools.containsKey("OLTP"),  "missing OLTP pool");
-        assertTrue(pools.containsKey("GRAPH"), "missing GRAPH pool");
-        assertTrue(pools.containsKey("OLAP"),  "missing OLAP pool");
-
-        // each category has at least one prepared query
-        assertFalse(pools.get("OLTP").isEmpty(),  "OLTP pool is empty");
-        assertFalse(pools.get("GRAPH").isEmpty(), "GRAPH pool is empty");
-        assertFalse(pools.get("OLAP").isEmpty(),  "OLAP pool is empty");
-
-        // spot-check instances are non-null
-        assertNotNull(pools.get("OLTP").getFirst(),  "first OLTP prepared query is null");
-        assertNotNull(pools.get("GRAPH").getFirst(), "first GRAPH prepared query is null");
-        assertNotNull(pools.get("OLAP").getFirst(),  "first OLAP prepared query is null");
+        QueryTemplate.PreparedQuery first = oltp.get(0);
+        assertNotNull(first.text);
+        assertNotNull(first.params);
+        assertTrue(first.params.containsKey("id"), "OLTP query should bind 'id'");
     }
 }
